--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       para acessar os detalhes da validação de atualização de email em Account.
     </p>
 
-    <a href="documentacao.html" target="_blank"
+    <a href="validacaoAtualizacaoEmailAccount.html" target="_blank"
       >📘 Acessar Documentação Técnica</a
     >
   </body>
