--- a/index.html
+++ b/index.html
@@ -3,33 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Projeto Salesforce - Página Inicial</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f9f9f9;
-        color: #333;
-        padding: 40px;
-      }
-
-      h1 {
-        color: #2c3e50;
-      }
-
-      a {
-        display: inline-block;
-        margin-top: 20px;
-        padding: 12px 20px;
-        background-color: #0078d4;
-        color: white;
-        text-decoration: none;
-        border-radius: 6px;
-        font-weight: bold;
-      }
-
-      a:hover {
-        background-color: #005fa3;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>📁 Projeto Salesforce</h1>
