--- a/validacaoAtualizacaoEmailAccount.html
+++ b/validacaoAtualizacaoEmailAccount.html
@@ -1,87 +1,22 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+<!-- ...existing code... -->
   <head>
     <meta charset="UTF-8" />
     <title>Documentação Técnica - Validação de Email em Account</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 40px;
-        line-height: 1.6;
-        color: #333;
-      }
-      h1,
-      h2,
-      h3 {
-        color: #2c3e50;
-      }
-      code {
-        background-color: #f4f4f4;
-        padding: 4px 6px;
-        border-radius: 4px;
-        font-family: Consolas, monospace;
-      }
-      pre {
-        background-color: #f4f4f4;
-        padding: 12px;
-        border-radius: 6px;
-        overflow-x: auto;
-      }
-      .section {
-        margin-bottom: 40px;
-        page-break-before: always;
-      }
-      .section:first-child {
-        page-break-before: auto;
-      }
-      ul,
-      ol {
-        margin-left: 20px;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>📘 Documentação Técnica</h1>
-    <h2>Validação de Atualização de Email em Account</h2>
+    <!-- ...existing code... -->
 
-    <div class="section">
-      <h3>🎯 Objetivo</h3>
-      <p>
-        Impedir a atualização do campo <code>Email__c</code> em registros do
-        objeto <strong>Account</strong> caso não existam
-        <strong>Contatos relacionados</strong>. A operação deve ser bloqueada
-        com uma mensagem de erro amigável.
-      </p>
-    </div>
+      <div class="section">
+        <h3>🏗️ Estrutura do Código</h3>
 
-    <div class="section">
-      <h3>🧠 Conceitos Aplicados</h3>
-      <ul>
-        <li>
-          <strong>Observer Pattern</strong>: Observa alterações no campo
-          <code>Email__c</code> e aciona a lógica de validação.
-        </li>
-        <li>
-          <strong>Strategy Pattern</strong>: Encapsula a lógica de validação,
-          permitindo flexibilidade e reutilização.
-        </li>
-        <li>
-          <strong>Trigger Handler Pattern</strong>: Centraliza o controle da
-          trigger em uma classe externa, promovendo organização e testabilidade.
-        </li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h3>🏗️ Estrutura do Código</h3>
-
-      <h4>1. Trigger: <code>DSP_Account</code></h4>
-      <pre><code>trigger DSP_Account on Account (before insert, before update) {
+        <h4>1. Trigger: <code>DSP_Account</code></h4>
+        <pre><button class="copy-btn" onclick="copyCode(this)">Copiar</button><code>trigger DSP_Account on Account (before insert, before update) {
     new DSP_AccountTriggerHandler(Trigger.new, Trigger.oldMap, Trigger.isInsert, Trigger.isUpdate).run();
 }</code></pre>
 
-      <h4>2. Trigger Handler: <code>DSP_AccountTriggerHandler</code></h4>
-      <pre><code>public class DSP_AccountTriggerHandler {
+        <h4>2. Trigger Handler: <code>DSP_AccountTriggerHandler</code></h4>
+        <pre><button class="copy-btn" onclick="copyCode(this)">Copiar</button><code>public class DSP_AccountTriggerHandler {
     public void run() {
         if (isUpdate) {
             EPFV_AccountEmailObserver.handle(newList, oldMap);
@@ -89,8 +24,8 @@
     }
 }</code></pre>
 
-      <h4>3. Observer: <code>EPFV_AccountEmailObserver</code></h4>
-      <pre><code>public class EPFV_AccountEmailObserver {
+        <h4>3. Observer: <code>EPFV_AccountEmailObserver</code></h4>
+        <pre><button class="copy-btn" onclick="copyCode(this)">Copiar</button><code>public class EPFV_AccountEmailObserver {
     public static void handle(List&lt;Account&gt; newList, Map&lt;Id, Account&gt; oldMap) {
         List&lt;Account&gt; changedAccounts = new List&lt;Account&gt;();
         for (Account acc : newList) {
@@ -103,15 +38,15 @@
     }
 }</code></pre>
 
-      <h4>
-        4. Interface Strategy: <code>EPFV_AccountValidationStrategy</code>
-      </h4>
-      <pre><code>public interface EPFV_AccountValidationStrategy {
+        <h4>
+          4. Interface Strategy: <code>EPFV_AccountValidationStrategy</code>
+        </h4>
+        <pre><button class="copy-btn" onclick="copyCode(this)">Copiar</button><code>public interface EPFV_AccountValidationStrategy {
     void validate(List&lt;Account&gt; accounts);
 }</code></pre>
 
-      <h4>5. Implementação: <code>EPFV_ContactExistenceValidator</code></h4>
-      <pre><code>public class EPFV_ContactExistenceValidator implements EPFV_AccountValidationStrategy {
+        <h4>5. Implementação: <code>EPFV_ContactExistenceValidator</code></h4>
+        <pre><button class="copy-btn" onclick="copyCode(this)">Copiar</button><code>public class EPFV_ContactExistenceValidator implements EPFV_AccountValidationStrategy {
     public void validate(List&lt;Account&gt; accounts) {
         Set&lt;Id&gt; accountIds = new Set&lt;Id&gt;();
         for (Account acc : accounts) {
@@ -133,28 +68,22 @@
         }
     }
 }</code></pre>
-    </div>
+      </div>
 
-    <div class="section">
-      <h3>📌 Fluxo de Execução</h3>
-      <ol>
-        <li>A trigger é acionada no <code>before update</code>.</li>
-        <li>O handler verifica se é uma atualização e chama o Observer.</li>
-        <li>O Observer detecta alterações no campo <code>Email__c</code>.</li>
-        <li>A Strategy é acionada para validar se há contatos.</li>
-        <li>
-          Se não houver, a atualização é bloqueada com <code>addError()</code>.
-        </li>
-      </ol>
-    </div>
+    <!-- ...existing code... -->
 
-    <div class="section">
-      <h3>🧪 Sugestões Futuras</h3>
-      <ul>
-        <li>Criar testes unitários com <code>@isTest</code>.</li>
-        <li>Expandir a lógica para outros campos ou objetos.</li>
-        <li>Adicionar logs para auditoria.</li>
-      </ul>
-    </div>
+    <script>
+      function copyCode(btn) {
+        const code = btn.parentElement.querySelector('code');
+        let text = code.innerHTML
+          .replace(/&lt;/g, "<")
+          .replace(/&gt;/g, ">")
+          .replace(/&amp;/g, "&");
+        navigator.clipboard.writeText(text).then(() => {
+          btn.textContent = "Copiado!";
+          setTimeout(() => (btn.textContent = "Copiar"), 1200);
+        });
+      }
+    </script>
   </body>
-</html>
+<!-- ...existing code...
