--- a/index.html
+++ b/index.html
@@ -1,19 +1,116 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Projeto Salesforce - Página Inicial</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <h1>📁 Projeto Salesforce</h1>
-    <p>
-      Bem-vindo à documentação técnica do projeto. Abaixo você encontra o link
-      para acessar os detalhes da validação de atualização de email em Account.
-    </p>
+<head>
+  <meta charset="UTF-8">
+  <title>Roteiro Nova York - Erick</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 2cm;
+      line-height: 1.6;
+      color: #333;
+    }
+    h1 {
+      text-align: center;
+      font-size: 24px;
+      margin-bottom: 0.5em;
+    }
+    h2 {
+      font-size: 18px;
+      margin-top: 1.5em;
+      color: #0056b3;
+    }
+    ul {
+      margin-top: 0.5em;
+      padding-left: 1.2em;
+    }
+    li {
+      margin-bottom: 0.4em;
+    }
+    .dia {
+      font-weight: bold;
+      margin-top: 1em;
+    }
+  </style>
+</head>
+<body>
+  <h1>🗽 Roteiro Nova York — Erick (24/10 a 02/11)</h1>
 
-    <a href="validacaoAtualizacaoEmailAccount.html" target="_blank"
-      >📘 Acessar Documentação Técnica</a
-    >
-  </body>
+  <h2>📅 24/10 – Chegada + Prospect Park + Smorgasburg</h2>
+  <ul>
+    <li>Chegada no JFK às 07h → AirTrain JFK → Howard Beach → Linha A → 59 St → Linha D → Fort Hamilton Pkwy → Caminhada até hotel (próximo à estação 9 Av)</li>
+    <li>Deixar malas no hotel</li>
+    <li>Visitar Prospect Park, Grand Army Plaza, Brooklyn Public Library</li>
+    <li>Almoçar no Smorgasburg Prospect Park (domingo)</li>
+    <li>Retorno: Linha D até 9 Av</li>
+  </ul>
+
+  <h2>📅 25/10 – Midtown Manhattan + Beast & Butterflies</h2>
+  <ul>
+    <li>NY Public Library, Bryant Park, Grand Central Terminal, 5ª Avenida</li>
+    <li>Times Square iluminada</li>
+    <li>Drinks no rooftop Beast & Butterflies (226 W 52nd St)</li>
+    <li>Retorno: Linha D até 9 Av</li>
+  </ul>
+
+  <h2>📅 26/10 – Central Park + Harlem + Hamburger America</h2>
+  <ul>
+    <li>Central Park: Bethesda Terrace, Bow Bridge, The Mall</li>
+    <li>Harlem: Apollo Theater + culto gospel</li>
+    <li>Jantar no Hamburger America (51 MacDougal St)</li>
+    <li>Retorno: Linha D até 9 Av</li>
+  </ul>
+
+  <h2>📅 27/10 – Estátua da Liberdade (paga) + Downtown + Brooklyn Bridge</h2>
+  <ul>
+    <li>Passeio oficial com Statue City Cruises</li>
+    <li>Battery Park, Wall Street, Memorial 11/9</li>
+    <li>Caminhada pela Brooklyn Bridge</li>
+    <li>Retorno: Linha D até 9 Av</li>
+  </ul>
+
+  <h2>📅 28/10 – DUMBO + Brooklyn Bridge Park + Brooklyn Brewery</h2>
+  <ul>
+    <li>Fotos em DUMBO, passeio no Brooklyn Bridge Park</li>
+    <li>Brooklyn Brewery (79 N 11th St)</li>
+    <li>Retorno: Linha D até 9 Av</li>
+  </ul>
+
+  <h2>📅 29/10 – Museu + High Line + Shake Shack + Rudy’s Bar</h2>
+  <ul>
+    <li>Museu de História Natural</li>
+    <li>Caminhada pela High Line e Hudson Yards</li>
+    <li>Almoço no Shake Shack</li>
+    <li>Noite no Rudy’s Bar & Grill (Hell’s Kitchen)</li>
+    <li>Retorno: Linha D até 9 Av</li>
+  </ul>
+
+  <h2>📅 30/10 – Brooklyn Cultural + Dia Livre</h2>
+  <ul>
+    <li>Museu do Brooklyn (grátis na 1ª quinta à noite)</li>
+    <li>Passeio por Flatbush Av ou revisitar locais preferidos</li>
+    <li>Retorno: Linha D até 9 Av</li>
+  </ul>
+
+  <h2>📅 31/10 – Halloween em NYC 🎃</h2>
+  <ul>
+    <li>Passeio por Greenwich Village</li>
+    <li>Village Halloween Parade às 19h</li>
+    <li>Retorno: Linha D até 9 Av</li>
+  </ul>
+
+  <h2>📅 01/11 – Compras + Coney Island</h2>
+  <ul>
+    <li>Compras: Century 21, Marshalls, Burlington</li>
+    <li>Passeio na praia e calçadão de Coney Island</li>
+    <li>Retorno: Linha D até 9 Av</li>
+  </ul>
+
+  <h2>📅 02/11 – Último dia + retorno ao JFK</h2>
+  <ul>
+    <li>Manhã livre no bairro</li>
+    <li>Saída para o aeroporto até 15h30</li>
+    <li>Trajeto: Linha D → 59 St → Linha A → Howard Beach → AirTrain JFK</li>
+  </ul>
+</body>
 </html>
