--- a/index.html
+++ b/index.html
@@ -45,13 +45,22 @@
       <li>Retorno: Linha D até 9 Av</li>
     </ul>
 
-    <h2>📅 25/10 – Midtown Manhattan + Beast & Butterflies</h2>
+    <h2>
+      📅 25/10 – Jersey Gardens Outlet + Times Square + Beast & Butterflies
+    </h2>
     <ul>
       <li>
-        NY Public Library, Bryant Park, Grand Central Terminal, 5ª Avenida
+        Manhã: Ônibus NJ Transit 111 ou 115 no Port Authority até Jersey Gardens
+        Outlet (Elizabeth, NJ)
       </li>
-      <li>Times Square iluminada</li>
-      <li>Drinks no rooftop Beast & Butterflies (226 W 52nd St)</li>
+      <li>Compras no outlet (aberto das 10h às 20h)</li>
+      <li>
+        Tarde: Retorno a Manhattan, passeio leve pela Bryant Park ou 5ª Avenida
+      </li>
+      <li>
+        Noite: Times Square iluminada + drinks no rooftop Beast & Butterflies
+        (226 W 52nd St)
+      </li>
       <li>Retorno: Linha D até 9 Av</li>
     </ul>
 
@@ -109,9 +118,9 @@
       <li>Retorno: Linha D até 9 Av</li>
     </ul>
 
-    <h2>📅 01/11 – Compras + Coney Island</h2>
+    <h2>📅 01/11 – Compras leves + Coney Island</h2>
     <ul>
-      <li>Compras: Century 21, Marshalls, Burlington</li>
+      <li>Compras em Century 21, Marshalls, Burlington</li>
       <li>Passeio na praia e calçadão de Coney Island</li>
       <li>Retorno: Linha D até 9 Av</li>
     </ul>
