--- a/index.html
+++ b/index.html
@@ -80,11 +80,16 @@
       <li>Retorno: Linha D até 9 Av</li>
     </ul>
 
-    <h2>📅 27/10 – Estátua da Liberdade (paga) + Downtown + Brooklyn Bridge</h2>
+    <h2>
+      📅 27/10 – Estátua da Liberdade (Liberty Island) + Downtown + Brooklyn
+      Bridge
+    </h2>
     <ul>
-      <li>Passeio oficial com Statue City Cruises</li>
-      <li>Battery Park, Wall Street, Memorial 11/9</li>
-      <li>Caminhada pela Brooklyn Bridge</li>
+      <li>Manhã: Chegada ao Battery Park</li>
+      <li>Ferry oficial para Liberty Island (sem pedestal ou Ellis Island)</li>
+      <li>Visita à ilha e ao museu da Estátua da Liberdade</li>
+      <li>Tarde: Retorno a Manhattan → Wall Street, Memorial 11/9</li>
+      <li>Caminhada pela Brooklyn Bridge ao pôr do sol</li>
       <li>Retorno: Linha D até 9 Av</li>
     </ul>
 
@@ -114,22 +119,7 @@
     <h2>📅 31/10 – Halloween em NYC 🎃</h2>
     <ul>
       <li>Passeio por Greenwich Village</li>
-      <li>Village Halloween Parade às 19h</li>
-      <li>Retorno: Linha D até 9 Av</li>
-    </ul>
-
-    <h2>📅 01/11 – Compras leves + Coney Island</h2>
-    <ul>
-      <li>Compras em Century 21, Marshalls, Burlington</li>
-      <li>Passeio na praia e calçadão de Coney Island</li>
-      <li>Retorno: Linha D até 9 Av</li>
-    </ul>
-
-    <h2>📅 02/11 – Último dia + retorno ao JFK</h2>
-    <ul>
-      <li>Manhã livre no bairro</li>
-      <li>Saída para o aeroporto até 15h30</li>
-      <li>Trajeto: Linha D → 59 St → Linha A → Howard Beach → AirTrain JFK</li>
+      <li>Village Halloween</li>
     </ul>
   </body>
 </html>
